--- a/prismProject/prismProject.csproj
+++ b/prismProject/prismProject.csproj
@@ -262,6 +262,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="splashScreen.resx">
       <DependentUpon>splashScreen.cs</DependentUpon>
@@ -285,6 +286,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Multimedia\backgroundLogin1.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Multimedia\back1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Multimedia\tickReq.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Multimedia\background2.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Multimedia\New Project %283%29.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\Microsoft.Data.SqlClient.SNI.5.2.0\build\net462\Microsoft.Data.SqlClient.SNI.targets" Condition="Exists('packages\Microsoft.Data.SqlClient.SNI.5.2.0\build\net462\Microsoft.Data.SqlClient.SNI.targets')" />
